@@ -15,8 +15,7 @@ y)
 
 \value{A list, same type as x, but with added elements from y.}
 
-\author{Inlinedocs development team
-<inlinedocs-support@lists.r-forge.r-project.org>}
+\author{Inlinedocs development team <inlinedocs-support@lists.r-forge.r-project.org>}
 
 
 
