@@ -28,8 +28,7 @@ of class y.z}
 
 If no matching generic functions are found, returns an empty list.}
 
-\author{Inlinedocs development team
-<inlinedocs-support@lists.r-forge.r-project.org>}
+\author{Inlinedocs development team <inlinedocs-support@lists.r-forge.r-project.org>}
 
 
 
